<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Birthday_Activity">
    <EditText
        android:id="@+id/edtFromName"
        android:layout_width="250dp"
        android:layout_height="54dp"
        android:layout_marginTop="56dp"
        android:background="@color/white"
        android:hint="@string/Enter_Creator"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtToName" />

    <EditText
        android:id="@+id/edtToName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:hint="@string/eg_aditya"
        android:textAlignment="center"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:flow_horizontalAlign="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/createBirthdayButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:shadowColor="#54315A"
        android:shadowDx="10"
        android:shadowDy="10"
        android:text="@string/create_the_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtFromName" />


</androidx.constraintlayout.widget.ConstraintLayout>